@@ -956,9 +956,92 @@ function AVIM()	{
 		return str.indexOf(w) >= 0;
 	};
 	
+	/**
+	 * Returns whether AVIM should ignore the given element.
+	 *
+	 * @param el	{object}	A DOM node representing a textbox element.
+	 * @returns {boolean}	True if the element should be ignored; false
+	 * 						otherwise.
+	 */
 	this.findIgnore=function(el) {
-		return el.id && AVIMConfig.exclude.indexOf(el.id.toLowerCase()) >= 0;
+		var id = el.id;
+		// Zotero's <noteeditor> tag makes id a function for some reason.
+		if (!id || id instanceof Function) return false;
+		return AVIMConfig.exclude.indexOf(id.toLowerCase()) >= 0;
 	}
+	
+	/**
+	 * Returns the raw HTML or XUL input element contained in the given root
+	 * element's XBL binding. The returned node can be treated just like an
+	 * ordinary textbox.
+	 *
+	 * @param root	{object}	A DOM node representing an input element.
+	 * @returns {object}	A DOM node representing the raw input element.
+	 */
+	this.getAnonymousInputField = function(root) {
+		var name = root.localName;
+		var field = root.textbox || root.inputField || root.mInputField;
+		if (field) return field;
+		
+		var $attr = function(elt, attrName, attrValue) {
+			return document.getAnonymousElementByAttribute(elt, attrName,
+														   attrValue);
+		};
+		
+		// Common XBL controls
+		var anonIds = {
+			findbar: "findbar-textbox", searchvalue: "input",
+			"sb-locationbar-textbox": "textbox", conversation: "input"
+		};
+		if (anonIds[name]) return $attr(root, "anonid", anonIds[name]);
+		
+		// Zotero
+		var ids = {zoterotagselector: "tags-search"};
+		if (ids[name]) return $attr(root, "id", ids[name]);
+		if (name == "noteeditor") {
+			var linksBox = $attr(root, "id", "links");
+			var popup = $attr(linksBox, "id", "tagsPopup");
+			if (!popup || popup.state == "closed") {
+				return $attr(root, "id", "noteField");
+			}
+			root = $attr(linksBox, "id", "tags");
+			name = "tagsbox";
+		}
+		if (name == "tagsbox") {
+			var rows = $attr(root, "id", "tagRows").childNodes;
+			for (var i = 0; i < rows.length; i++) {
+				var row = rows[i];
+				var childNodes = row.childNodes;
+				for (var i = 0; i < childNodes.length; i++) {
+					var child = childNodes[i];
+					if (child.inputField) return child;
+				}
+			}
+			return null;
+		}
+		if (name == "zoterosearch") {
+			var conds = $attr(root, "id", "conditions");
+			conds = conds.childNodes;
+			for (var i = 0; i < conds.length; i++) {
+				var cond = conds[i];
+				field = $attr(cond, "id", "valuefield");
+				field = $attr(field, "id", "search-textbox");
+				if (field && field.focused) return field;
+			}
+			return null;
+		}
+		
+		// Songbird
+		if (name == "sb-servicepane" && root.mTreePane &&
+			root.mTreePane.mTree) {
+			return root.mTreePane.mTree.inputField;
+		}
+		
+		// XBL controls in webpages
+		root = root.wrappedJSObject;
+		if (!root) return null;
+		return root.inputField || root.mInputField;
+	};
 	
 	/**
 	 * Handles key presses in the current window. This function is triggered as
@@ -980,24 +1063,7 @@ function AVIM()	{
 		// If the XUL element is actually an XBL-bound element, get the
 		// anonymous inner element.
 		if (el.namespaceURI == xulURI) {
-			var anonEl = el.textbox || el.inputField || el.mInputField;
-			var xulAnonIDs = {
-				findbar: "findbar-textbox", searchvalue: "input",
-				"sb-locationbar-textbox": "textbox", conversation: "input"
-			};
-			var anonID = xulAnonIDs[el.localName];
-			if (!anonEl && anonID) {
-				anonEl = document.getAnonymousElementByAttribute(el, "anonid",
-																 anonID);
-			}
-			if (!anonEl && el.localName == "sb-servicepane" && el.mTreePane &&
-				el.mTreePane.mTree) {
-				anonEl = el.mTreePane.mTree.inputField;
-			}
-			if (!anonEl && el.wrappedJSObject) {
-				var anonWrapper = el.wrappedJSObject;
-				anonEl = anonWrapper.inputField || anonWrapper.mInputField;
-			}
+			var anonEl = this.getAnonymousInputField(el);
 			if (anonEl) el = anonEl;
 		}
 		var isHTML = el.type == "textarea" || el.type == "text";
